// compile: protoc -I networkdb/ networkdb/api/networkdb.proto --go_out=plugins=grpc:networkdb

syntax = "proto3";

import "messages.proto";

package networkdb;

// Interface exported by the server.
service NetworkDB {
  // Component initialization
  rpc Initialize (Configuration) returns (Result) {}

  // // Cluster related operations
  // rpc StateCluster () return (State) {}
  rpc JoinCluster (JoinClusterReq) returns (Result) {}
  // rpc LeaveCluster (MemberList) return (Result) {}
  // rpc PeersCluster () return (PeerList) {}
  //
  // // Group operations
  // rpc JoinGroup (Group) returns (Result) {}
  // rpc LeaveGroup (Group) returns (Result) {}
  // rpc ListGroup () return (Result) {}
  // rpc PeersGroup (Group) return (Result) {}
  // rpc WatchGroup (Group) return (stream EntryValue) {}
  //
  // // Entry operations
  // rpc CreateEntry (EntryKey, EntryValue) returns (Result) {}
  // rpc ReadEntry (EntryKey) returns (EntryValue)
  // rpc UpdateEntry (EntryKey, EntryValue) returns (Result) {}
  // rpc DeleteEntry (EntryKey) returns (Result) {}
}
